--- a/cart.html
+++ b/cart.html
@@ -73,8 +73,8 @@
                         <div class="col-12 col-md-8">
                         </div>
                         <div class="col-12 col-md-4">
-                            <p class="bold">Subtotal: UYU</p>
-                            <p id="subtotal-art" class="bold"></p>
+                            <span class="bold"> Subtotal: UYU </span>
+                            <span id="subtotal-art" class="bold"></span>
                         </div>
                     </div>
                 </div>
@@ -116,8 +116,8 @@
                                     </div>
                                 </form>
                                 <p class="bold alertmessage" id="error-costo-envio"></p>
-                                <p class="bold" style="margin-top: 20px;">Costo de envio: UYU</p>
-                                <p class="bold" id="costo-envio" style="margin-top: 20px;"></p>
+                                <span class="bold" style="margin-top: 20px;">Costo de envio: UYU</span>
+                                <span class="bold" id="costo-envio" style="margin-top: 20px;"></span>
                                 <button type="button" class="btn btn-secondary" style="width: 100%;" onclick="validarCostoEnvio(); validarDatosEnvio()">Aceptar</button>
                             </div>
                         </div>
@@ -131,8 +131,8 @@
                         <div class="col-12 col-md-8">
                         </div>
                         <div class="col-12 col-md-4">
-                            <p class="bold">Total a pagar: UYU</p>
-                            <p id="total" class="bold"></p>
+                            <span style="font-size: larger; font-weight: bolder;">Total a pagar: UYU</span>
+                            <span id="total" style="font-size: larger; font-weight: bolder;"></span>
                         </div>
                     </div>
                 </div>
@@ -209,7 +209,7 @@
                             <button class="button btn btn-dark" type="button" id="comprarbtn" onclick="validarCompra()" style="width: 100%;"> Comprar </button>
                         </div>
                         <p class="bold alertmessage" id="error-compra"></p>
-                        <p class="bold alert-success .text-center" id="exito-compra"></p>
+                        <p class="bold bold successmessage" id="exito-compra"></p>
                     </div>
                 </div>
             </div>
