--- a/product-info.html
+++ b/product-info.html
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </div>
-        <div class="alert-success .text-center">
+        <div class="bold successmessage">
             <p id="commentok"></p>
         </div>
         <div>
