--- a/products.html
+++ b/products.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="list-group" id="prod-list-container">
+                <div class="card-deck" id="prod-list-container">
                 </div>
             </div>
         </div>
